Modified loading style away from rawInvocation to annotated Controllers. Fixed signed request decoding.

--- a/tests_and_demos/basics/conf/application.conf
+++ b/tests_and_demos/basics/conf/application.conf
@@ -67,14 +67,15 @@ date.format=yyyy-MM-dd
 # ~~~~~
 # Specify log level for your application.
 # If you want a very customized log, create a log4j.properties file in the conf directory
-# application.log=INFO
+application.log=INFO
 #
 # More logging configuration
-# application.log.path=/log4j.properties
-# application.log.system.out=off
+application.log.path=/log4j.properties
+#application.log.system.out=on
+
 
 # Database configuration
-# ~~~~~ 
+# ~~~~~
 # Enable a database engine if needed.
 #
 # To quickly set up a development database, use either:
@@ -105,7 +106,7 @@ date.format=yyyy-MM-dd
 # Specify the custom JPA dialect to use here (default to guess):
 # jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 #
-# Specify the ddl generation pattern to use. Set to none to disable it 
+# Specify the ddl generation pattern to use. Set to none to disable it
 # (default to update in DEV mode, and none in PROD mode):
 # jpa.ddl=update
 #
@@ -120,7 +121,7 @@ date.format=yyyy-MM-dd
 attachments.path=data/attachments
 
 # Memcached configuration
-# ~~~~~ 
+# ~~~~~
 # Enable memcached if needed. Otherwise a local cache is used.
 # memcached=enabled
 #
@@ -154,7 +155,7 @@ attachments.path=data/attachments
 # http.proxyPassword = jojo
 
 # Mail configuration
-# ~~~~~ 
+# ~~~~~
 # Default is to use a mock Mailer
 mail.smtp=mock
 
@@ -178,7 +179,7 @@ mail.smtp=mock
 # Open file from errors pages
 # ~~~~~
 # If your text editor supports opening files by URL, Play! will
-# dynamically link error pages to files 
+# dynamically link error pages to files
 #
 # Example, for textmate:
 # play.editor=txmt://open?url=file://%s&line=%s
@@ -191,3 +192,9 @@ mail.smtp=mock
 %test.jpa.ddl=create-drop
 %test.mail.smtp=mock
 
+# Facebook Module
+module.facebook=/Users/scott/Documents/facebook
+facebook.id=126931720685559
+facebook.apiKey=4f42f2a2b34cb915bc0045db3820cbf2
+facebook.secret=aa1fb1e65375bb54db627075adfa6c91
+facebook.postAuthURL=http://driftlogic.net:9000/
